--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,10 @@ streamlit = {version = "^1.10.0", optional = true, allow-prereleases = true}
 torch = ">=1.6"
 torchvision = "^0.12.0"
 transformers = "^4.20.1"
+accelerate = "^0.11.0"
+fsspec = "^2022.7.0"
+kornia = "^0.6.6"
+tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
 
